--- a/index.html
+++ b/index.html
@@ -16,46 +16,46 @@
     <div class="root">
         <div class="prenav">
             <div>
-                <img class="icon" src="../assets/phoneIcon.png" alt="">
+                <img class="icon" src="assets/phoneIcon.png" alt="">
                 <p>+52 - 642 - 542 -5465</p>
             </div>
             <div>
-                <img class="icon" src="../assets/calendarIcon.png" alt="">
+                <img class="icon" src="assets/calendarIcon.png" alt="">
                 <p> Lunes a viernes 09:00 am a 09:00</p>
             </div>
             <div>
-                <img class="icon" id="ico-ubicacion" src="../assets/locationIcon.png" alt="">
+                <img class="icon" id="ico-ubicacion" src="assets/locationIcon.png" alt="">
                 <p> Lunes a viernes 09:00 am a 09:00</p>
             </div>
         </div>
         <nav>
             <div class="logo">
-                <img src="../assets/logo.png" alt="">
+                <img src="assets/logo.png" alt="">
                 <div class="barrita"></div>
                 <p>Distribuidora <br> Industrial <br> Navojoa</p>
             </div>
             <ul>
                 <li>
                     <a href="#inicio">
-                        <img src="../assets/iconarrow.png"></img>
+                        <img src="assets/iconarrow.png"></img>
                         Inicio
                     </a>
                 </li>
                 <li>
                     <a href="#quienesSomos">
-                        <img src="../assets/iconarrow.png"></img>
+                        <img src="assets/iconarrow.png"></img>
                         ¿Quienes somos?
                     </a>
                 </li>
                 <li>
                     <a href="#productos">
-                        <img src="../assets/iconarrow.png"></img>
+                        <img src="assets/iconarrow.png"></img>
                         Catalogo
                     </a>
                 </li>
                 <li>
                     <a href="#contacto">
-                        <img src="../assets/iconarrow.png"></img>
+                        <img src="assets/iconarrow.png"></img>
                         Contacto
                     </a>
                 </li>
@@ -67,11 +67,11 @@
                     <h1>Inserte el slogan</h1>
                     <button>Contactanos</button>
                 </div>
-                <img src="../assets/image 1.png" alt="">
+                <img src="assets/image 1.png" alt="">
             </section>
 
             <section class="somos" id="quienesSomos">
-                <img src="../assets/Group 3.png" alt="">
+                <img src="assets/Group 3.png" alt="">
                 <div class="textSomos">
                     <h2>Somos lideres en calidad</h2>
                     <div class="barras">
@@ -93,15 +93,15 @@
                         </p>
                     </div>
                 </div>
-                <img src="../assets/image 24.png" alt="">
+                <img src="assets/image 24.png" alt="">
             </section>
 
             <section class="proveedores">
                 <h2>Nuestros proveedores</h2>
                 <div class="marcas">
-                    <img src="../assets/proveedor1.png" alt="">
-                    <img src="../assets/proveedor2.png" alt="">
-                    <img src="../assets/proveedor3.png" alt="">
+                    <img src="assets/proveedor1.png" alt="">
+                    <img src="assets/proveedor2.png" alt="">
+                    <img src="assets/proveedor3.png" alt="">
                 </div>
                 <p>
                     Somos una empresa perrona aqui va pq somos perrones somos muy cool nos dedicamos mucho a esto y la neta el mejor personaje de marvel es spiderman y superman está infravalorado a día de hoy, teniendo a batman como cara de dc, siendo uno de los superheroes mas mega ultra buffeados del mundo del comic, un ser humano peleando con dioses, q mamada siono.
@@ -120,19 +120,19 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide">
-                        <img src="../assets/PRespiratoria.jpg" />
+                        <img src="assets/PRespiratoria.jpg" />
                       </div>
                       <div class="swiper-slide">
-                        <img src="../assets/seguridad en caidas.jpg" />
+                        <img src="assets/seguridad en caidas.jpg" />
                       </div>
                       <div class="swiper-slide">
-                        <img src="../assets/Calzado.jpg" />
+                        <img src="assets/Calzado.jpg" />
                       </div>
                       <div class="swiper-slide">
-                        <img src="../assets/Ropa de seguridad.jpg">
+                        <img src="assets/Ropa de seguridad.jpg">
                       </div>
                       <div class="swiper-slide">
-                        <img src="../assets/Cascos.jpg" />
+                        <img src="assets/Cascos.jpg" />
                       </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -159,22 +159,22 @@
     <footer id="contacto">
         <div class="footercontent">
             <div class="footcard">
-                <img src="../assets/bigPhone.png" alt="">
+                <img src="assets/bigPhone.png" alt="">
                 <p>+52 - 642 - 116 - 6931</p>
             </div>
             <div class="footcard">
-                <img src="../assets/bigCalendar.png" alt="">
+                <img src="assets/bigCalendar.png" alt="">
                 <p>Lunes a viernes. 09:00 am a 06:00 pm</p>
             </div>
             <div class="footcard">
-                <img id="big-ico-ubicacion" src="../assets/bigUbication.png" alt="">
+                <img id="big-ico-ubicacion" src="assets/bigUbication.png" alt="">
                 <p>Periférico Sur #1819, C. Beltrones, 85820 Navojoa, Son.</p>
             </div>
         </div>
        
     </footer>
     <div class="static-msj">
-        <img src="../assets/whatsapp.png" alt="">
+        <img src="assets/whatsapp.png" alt="">
         <h3>¡Envianos un mensaje!</h3>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
