adding color changes and tornillos section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./slider.css">
+    <link rel="stylesheet" href="./tornillos_slide.css">
 
     <title>Distribuidora industrial Navojoa</title>
 </head>
@@ -33,9 +34,9 @@
             </div>
         </div>
         <nav>
-            <div class="logo">
+            <div class="nav__logo">
                 <img src="assets/logo.png" alt="">
-                <div class="barrita"></div>
+                <div class="nav__barrita"></div>
                 <p>Distribuidora <br> Industrial <br> Navojoa</p>
             </div>
             <ul>
@@ -67,7 +68,7 @@
         </nav>
         <section class="main" id="inicio">
             <article class="contenido" >
-                <div class="title">
+                <div class="main__title">
                     <h1>Inserte el slogan</h1>
                     <button>Contactanos</button>
                 </div>
@@ -78,7 +79,7 @@
         <!-- <div class="contenido"> -->
         <section class="somos contenido" id="quienesSomos">
             <img src="assets/Group 3.png" alt="">
-            <div class="textSomos">
+            <div class="somos__textSomos">
                 <h2>Somos lideres en calidad</h2>
                 <div class="barras">
                     <div class="barra1"></div>
@@ -91,9 +92,9 @@
         </section>
 
         <section class="somos2">
-            <article class="barblue"></article>
+            <article class="somos2__BarRed"></article>
             <article class= "somos2__article contenido">
-                <div class="textBlue">
+                <div class="somos2__text">
                     <h2>Aqui va otra cosa</h2>
                     <div>
                         <p>
@@ -105,9 +106,95 @@
             </article>
         </section>
 
+        <section class="tornillos contenido">
+            <h2>Proveedor industrial de tornilleria</h2>
+            <article class="tornillos__article contenido">
+                <div class="slides">
+                    <div class="slide">
+                        <p>Todo tipo de <span>tornillos</span></p>
+                        <!-- Aqui un slide -->
+                        <div class="tornillos__article__slide">
+                            <div class="Tornillosswiper swiper mySwiperTornillo">
+                                <div class="swiper-wrapper">
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 27.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 28.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 29.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 30.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 31.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 32.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 33.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 34.png" alt="">
+                                </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <p>Para todo tipo de <span>trabajo</span></p>
+                        <!-- Aqui el otro slide -->
+                        <div class="tornillos__article__slide">
+                            <div class="Tornillosswiper swiper mySwiperTornillo">
+                                <div class="swiper-wrapper">
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 27.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 28.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 29.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 30.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 31.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 32.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 33.png" alt="">
+                                </div>
+                                <div class="Tornillos-slide swiper-slide">
+                                    <img src="./assets/tornillosSlide1/image 34.png" alt="">
+                                </div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+                <div class="tornillos__text">
+                    <p>
+                        Somos una empresa perrona aqui va pq somos perrones somos muy cool nos dedicamos mucho a esto y la neta el mejor personaje de marvel es spiderman y superman está infravalorado a día de hoy, teniendo a batman como cara de dc, siendo uno de los superheroes mas mega ultra buffeados del mundo del comic, un ser humano peleando con dioses, q mamada siono zzzzzzzzzzzzzzzzzzzzzz woijnijodnjw hola como estamos xdddd holaaaaaaaaaaaaaaaaaaaaaaa
+                        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                        aaaaaaaaaaaaaaaaaaaaa
+                        aaaaaaaaw
+                    </p>
+                </div>
+            </article>
+        </section>
+
         <section class="proveedores contenido">
             <h2>Nuestros proveedores</h2>
-            <div class="marcas">
+            <div class="proveedores__marcas">
                 <img src="assets/proveedores/proveedor1.png" alt="">
                 <img src="assets/proveedores/proveedor2.png" alt="">
                 <img src="assets/proveedores/proveedor3.png" alt="">
@@ -136,7 +223,7 @@
             </p>
         </section>
 
-        <section class="products contenido" id="productos">
+        <section class="productos contenido" id="productos">
             <h2>Nuestros productos</h2>
             <div class="barras">
                 <div class="b1"></div>
@@ -145,22 +232,47 @@
             </div>
 
                 <!-- EL SLIDER VA AQUI -->
-            <div class="swiper mySwiper">
+            <div class="swiper MainmySwiper">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="assets/PRespiratoria.jpg" />
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png1.png" />
+                        <p>Seguridad en caidas</p>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="assets/seguridad en caidas.jpg" />
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png10.png" />
+                        <p>Herramientas</p>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="assets/Calzado.jpg" />
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png2.png" />
+                        <p>Calzado de seguridad</p>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="assets/Ropa de seguridad.jpg">
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png3.png" />
+                        <p>Cascos de seguridad</p>
                     </div>
-                    <div class="swiper-slide">
-                        <img src="assets/Cascos.jpg" />
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png4.png" />
+                        <p>Ropa de seguridad</p>
+                    </div>
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png5.png" />
+                        <p>Proteccion respiratoria</p>
+                    </div>
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png6.png" />
+                        <p>Mas herramientas</p>
+                    </div>
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png7.png" />
+                        <p>Tornilleria</p>
+                    </div>
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png8.png" />
+                        <p>Pinzas de seguridad</p>
+                    </div>
+                    <div class="Mainswiper-slide swiper-slide">
+                        <img src="assets/productsSlide/png9.png" />
+                        <p>Y mas herramientas</p>
                     </div>
                 </div>
                     <div class="swiper-button-next"></div>
@@ -186,16 +298,16 @@
         <!-- </div> -->
     </div>
     <footer id="contacto">
-        <div class="footercontent">
-            <div class="footcard">
+        <div class="footer__content">
+            <div class="footer__card">
                 <img src="assets/iconos/bigPhone.png" alt="">
                 <p>+52 - 642 - 116 - 6931</p>
             </div>
-            <div class="footcard">
+            <div class="footer__card">
                 <img src="assets/iconos/bigCalendar.png" alt="">
                 <p>Lunes a viernes. 09:00 am a 06:00 pm</p>
             </div>
-            <div class="footcard">
+            <div class="footer__card">
                 <img src="assets/iconos/bigEmail.png" alt="">
                 <p>Ventas@dinav.com.mx</p>
             </div>
@@ -210,5 +322,6 @@
 </a>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="./index.js"></script>
+    <script src="./tornillos_slide.js"></script>
 </body>
 </html>
