--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
         </section>
 
         <section class="productos contenido" id="productos">
+            <div class="productos__title">
+                
+            </div>
             <h2>Nuestros productos</h2>
             <div class="barras">
                 <div class="b1"></div>
@@ -297,6 +300,9 @@
             </section>
         <!-- </div> -->
     </div>
+    <section class="maps">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d222.0800071895891!2d-109.44205322683673!3d27.052904787121488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x86b81b0be236d245%3A0xe3b13346803e2728!2sMariscos%20%22El%20Cuco%22!3m2!1d27.052832799999997!2d-109.4421484!4m0!5e0!3m2!1ses!2smx!4v1665683028359!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       </section>
     <footer id="contacto">
         <div class="footer__content">
             <div class="footer__card">
@@ -312,7 +318,7 @@
                 <p>Ventas@dinav.com.mx</p>
             </div>
         </div>
-       
+
     </footer>
     <a href="https://wa.me/+526421166931">
     <div class="static-msj">
