--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./slider.css">
     <link rel="stylesheet" href="./tornillos_slide.css">
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="./dinamicNav.js"></script>
+    
 
     <title>Distribuidora industrial Navojoa</title>
 </head>
@@ -33,7 +36,7 @@
                 <p> Ventas@dinav.com.mx</p>
             </div>
         </div>
-        <nav>
+        <nav class="nav" id="nav">
             <div class="nav__logo">
                 <img src="assets/logo.png" alt="">
                 <div class="nav__barrita"></div>
