adding dinamic details

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./slider.css">
     <link rel="stylesheet" href="./tornillos_slide.css">
     <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="./dinamicNav.js"></script>
+    <script defer src="./dinamicNav.js"></script>
     
 
     <title>Distribuidora industrial Navojoa</title>
@@ -38,7 +38,7 @@
         </div>
         <nav class="nav" id="nav">
             <div class="nav__logo">
-                <img src="assets/logo.png" alt="">
+                <img  id="logo" src="assets/logo.png" alt="">
                 <div class="nav__barrita"></div>
                 <p>Distribuidora <br> Industrial <br> Navojoa</p>
             </div>
