--- a/index.html
+++ b/index.html
@@ -18,19 +18,23 @@
 </head>
 <body>
     <div class="root">
-        <div class="prenav">
-            <div>
-                <img class="icon" src="./assets/iconos/phoneIcon.png" alt="">
-                <p>+52 - 642 - 542 -5465</p>
-            </div>
+        <div class="prenav" id="inicio">
+            <a href="https://wa.me/+526421166931">
+                <div>
+                    <img class="icon" src="./assets/iconos/phoneIcon.png" alt="">
+                    <p>+52 - 642 - 116 -6931</p>
+                </div>
+            </a>
             <div>
                 <img class="icon" src="assets/iconos/calendarIcon.png" alt="">
                 <p> Lunes a viernes 09:00 am a 09:00</p>
             </div>
-            <div>
-                <img class="icon" id="ico-ubicacion" src="assets/iconos/locationIcon.png" alt="">
-                <p> C. Agustín Melgar Sur 471, Tierra Blanca, 85820 Navojoa, Son.</p>
-            </div>
+            <a href="https://goo.gl/maps/ePfLodQdFe8jHT7w5">
+                <div>
+                    <img class="icon" id="ico-ubicacion" src="assets/iconos/locationIcon.png" alt="">
+                    <p> C. Agustín Melgar Sur 471, Tierra Blanca, 85820 Navojoa, Son.</p>
+                </div>
+            </a>
             <div>
                 <img class="icon" src="assets/iconos/email.png" alt="">
                 <p> Ventas@dinav.com.mx</p>
@@ -38,9 +42,9 @@
         </div>
         <nav class="nav" id="nav">
             <div class="nav__logo">
-                <img  id="logo" src="assets/logo.png" alt="">
+                <img  class="nav__logo__img" id="logo" src="assets/logo.png" alt="">
                 <div class="nav__barrita"></div>
-                <p>Distribuidora <br> Industrial <br> Navojoa</p>
+                <p class="nav__logo__p">Distribuidora <br> Industrial <br> Navojoa</p>
             </div>
             <ul>
                 <li>
@@ -69,11 +73,13 @@
                 </li>
             </ul>
         </nav>
-        <section class="main" id="inicio">
+        <section class="main">
             <article class="contenido" >
                 <div class="main__title">
                     <h1>Inserte el slogan</h1>
-                    <button>Contactanos</button>
+                    <a href="https://wa.me/+526421166931">
+                        <button>Contactanos</button>
+                    </a>
                 </div>
                 <img src="assets/image 1.png" alt="">
             </article>
@@ -155,28 +161,22 @@
                             <div class="Tornillosswiper swiper mySwiperTornillo">
                                 <div class="swiper-wrapper">
                                 <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 27.png" alt="">
+                                    <img src="./assets/tornillosSlide2/image 35.png" alt="">
                                 </div>
                                 <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 28.png" alt="">
+                                    <img src="./assets/tornillosSlide2/image 36.png" alt="">
                                 </div>
                                 <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 29.png" alt="">
+                                    <img src="./assets/tornillosSlide2/image 37.png" alt="">
                                 </div>
                                 <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 30.png" alt="">
+                                    <img src="./assets/tornillosSlide2/image 38.png" alt="">
                                 </div>
                                 <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 31.png" alt="">
+                                    <img src="./assets/tornillosSlide2/image 39.png" alt="">
                                 </div>
                                 <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 32.png" alt="">
-                                </div>
-                                <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 33.png" alt="">
-                                </div>
-                                <div class="Tornillos-slide swiper-slide">
-                                    <img src="./assets/tornillosSlide1/image 34.png" alt="">
+                                    <img src="./assets/tornillosSlide2/image 40.png" alt="">
                                 </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -186,10 +186,7 @@
                 </div>
                 <div class="tornillos__text">
                     <p>
-                        Somos una empresa perrona aqui va pq somos perrones somos muy cool nos dedicamos mucho a esto y la neta el mejor personaje de marvel es spiderman y superman está infravalorado a día de hoy, teniendo a batman como cara de dc, siendo uno de los superheroes mas mega ultra buffeados del mundo del comic, un ser humano peleando con dioses, q mamada siono zzzzzzzzzzzzzzzzzzzzzz woijnijodnjw hola como estamos xdddd holaaaaaaaaaaaaaaaaaaaaaaa
-                        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-                        aaaaaaaaaaaaaaaaaaaaa
-                        aaaaaaaaw
+                        Somos una empresa perrona aqui va pq somos perrones somos muy cool nos dedicamos mucho a esto y la neta el mejor personaje de marvel es spiderman y superman está infravalorado a día de hoy, teniendo a batman como cara de dc, siendo uno de los superheroes mas mega ultra buffeados del mundo del comic, un ser humano peleando con dioses, q mamada siono zzzzzzzzzzzzzzzzzzzzzz woijnijodnjw hola como estamos xdddd
                     </p>
                 </div>
             </article>
@@ -197,6 +194,11 @@
 
         <section class="proveedores contenido">
             <h2>Nuestros proveedores</h2>
+            <div class="barras">
+                <div class="b1"></div>
+                <div class="b2"></div>
+                <div class="b1"></div>
+            </div>
             <div class="proveedores__marcas">
                 <img src="assets/proveedores/proveedor1.png" alt="">
                 <img src="assets/proveedores/proveedor2.png" alt="">
@@ -209,8 +211,6 @@
                 <img src="assets/proveedores/proveedor9.png" alt="">
                 <img src="assets/proveedores/proveedor10.png" alt="">
                 <img src="assets/proveedores/proveedor11.png" alt="">
-                <img src="assets/proveedores/proveedor12.png" alt="">
-                <img src="assets/proveedores/proveedor12.png" alt="">
                 <img src="assets/proveedores/proveedor12.png" alt="">
                 <img src="assets/proveedores/proveedor13.png" alt="">
                 <img src="assets/proveedores/proveedor14.png" alt="">
@@ -228,17 +228,13 @@
 
         <section class="productos contenido" id="productos">
             <div class="productos__title">
-                
-            </div>
-            <h2>Nuestros productos</h2>
-            <div class="barras">
                 <div class="b1"></div>
-                <div class="b2"></div>
+                <h2>Nuestros productos</h2>    
                 <div class="b1"></div>
             </div>
 
                 <!-- EL SLIDER VA AQUI -->
-            <div class="swiper MainmySwiper">
+            <div class="swiper MainmySwiper ">
                 <div class="swiper-wrapper">
                     <div class="Mainswiper-slide swiper-slide">
                         <img src="assets/productsSlide/png1.png" />
@@ -303,8 +299,9 @@
             </section>
         <!-- </div> -->
     </div>
-    <section class="maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d222.0800071895891!2d-109.44205322683673!3d27.052904787121488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x86b81b0be236d245%3A0xe3b13346803e2728!2sMariscos%20%22El%20Cuco%22!3m2!1d27.052832799999997!2d-109.4421484!4m0!5e0!3m2!1ses!2smx!4v1665683028359!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section class="maps contenido">
+            <h3>¡Encuentranos!</h3>
+        <iframe class="maps__mapa" src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d222.0800071895891!2d-109.44205322683673!3d27.052904787121488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x86b81b0be236d245%3A0xe3b13346803e2728!2sMariscos%20%22El%20Cuco%22!3m2!1d27.052832799999997!2d-109.4421484!4m0!5e0!3m2!1ses!2smx!4v1665683028359!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
        </section>
     <footer id="contacto">
         <div class="footer__content">
