--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div>
                 <img class="icon" id="ico-ubicacion" src="assets/iconos/locationIcon.png" alt="">
-                <p> C. Agustín Melgar Sur 471, Tierra Blanca, 85820 Navojoa, Son.</p>
+                <p> Blvd. Manlio Fabio Beltrones 1819, Beltrones, 85860 Navojoa, Son.</p>
             </div>
             <div>
                 <img class="icon" src="assets/iconos/email.png" alt="">
@@ -304,7 +304,7 @@
         <!-- </div> -->
     </div>
     <section class="maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d222.0800071895891!2d-109.44205322683673!3d27.052904787121488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m5!1s0x86b81b0be236d245%3A0xe3b13346803e2728!2sMariscos%20%22El%20Cuco%22!3m2!1d27.052832799999997!2d-109.4421484!4m0!5e0!3m2!1ses!2smx!4v1665683028359!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d888.347899146547!2d-109.4557009!3d27.0493846!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86b81b9e7db4d279%3A0xf3875dcd0f0a825c!2sMahconsa!5e0!3m2!1ses!2smx!4v1666197091549!5m2!1ses!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
        </section>
     <footer id="contacto">
         <div class="footer__content">
