mobile responsive part 2

--- a/index.html
+++ b/index.html
@@ -73,6 +73,20 @@
                 </li>
             </ul>
         </nav>
+        <div class="menuMobile">
+            <div class="barrita"></div>
+            <div class="menuMobile__btn">
+                <ul class="menuMobile__lista">
+                    <li>
+                        <a href="#inicio">
+                                <img src="assets/iconos/iconarrow.png"></img>
+                                Inicio
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="barrita"></div>
+        </div>
         <section class="main">
             <article class="contenido" >
                 <div class="main__title">
