--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="./slider.css">
     <link rel="stylesheet" href="./tornillos_slide.css">
     <link rel="shortcut icon" href="./assets/minilogo.avif">
-    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script defer src="https://code.jquery.com/jquery-latest.js"></script>
     <script defer src="./dinamicNav.js"></script>
-    
+    <script defer src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script defer src="./index.js"></script>
+    <script defer src="./tornillos_slide.js"></script>
 
     <title>Distribuidora industrial Navojoa</title>
 </head>
@@ -386,8 +388,5 @@
         </div>
         </a>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
-    <script src="./index.js"></script>
-    <script src="./tornillos_slide.js"></script>
 </body>
 </html>
